--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,7 @@
     }
   ],
   "contributorsPerLine": 7,
-  "projectName": "myNote",
+  "projectName": "studyNotes",
   "projectOwner": "techstay",
   "repoType": "github",
   "repoHost": "https://github.com",
