📝 修改了网站标题

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "study-notes",
   "version": "1.0.0",
-  "description": "我的学习笔记仓库",
+  "description": "碎碎念的学习笔记",
   "main": "index.js",
   "scripts": {
     "dev": "vuepress dev",
