--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.51",
-    "@vuepress/plugin-back-to-top": "2.0.0-beta.51",
-    "@vuepress/plugin-external-link-icon": "2.0.0-beta.51",
-    "@vuepress/plugin-medium-zoom": "2.0.0-beta.51",
-    "@vuepress/plugin-nprogress": "2.0.0-beta.51",
-    "@vuepress/plugin-prismjs": "2.0.0-beta.51",
-    "vue": "^3.2.40",
-    "vuepress": "2.0.0-beta.51"
+    "@vuepress/client": "2.0.0-beta.53",
+    "@vuepress/plugin-back-to-top": "2.0.0-beta.53",
+    "@vuepress/plugin-external-link-icon": "2.0.0-beta.53",
+    "@vuepress/plugin-google-analytics": "2.0.0-beta.53",
+    "@vuepress/plugin-medium-zoom": "2.0.0-beta.53",
+    "@vuepress/plugin-nprogress": "2.0.0-beta.53",
+    "@vuepress/plugin-prismjs": "2.0.0-beta.53",
+    "@vuepress/plugin-search": "2.0.0-beta.53",
+    "vue": "^3.2.41",
+    "vuepress": "2.0.0-beta.53"
   }
 }
