--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "study-notes",
   "version": "1.0.0",
-  "description": "碎碎念的学习笔记",
+  "description": "落了一地碎碎念的学习笔记",
   "main": "index.js",
   "scripts": {
     "dev": "vuepress dev",
     "build": "vuepress build"
   },
   "keywords": [],
-  "author": "",
+  "author": "techstay",
   "license": "MIT",
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.53",
-    "@vuepress/plugin-back-to-top": "2.0.0-beta.53",
-    "@vuepress/plugin-external-link-icon": "2.0.0-beta.53",
     "@vuepress/plugin-google-analytics": "2.0.0-beta.53",
-    "@vuepress/plugin-medium-zoom": "2.0.0-beta.53",
-    "@vuepress/plugin-nprogress": "2.0.0-beta.53",
-    "@vuepress/plugin-prismjs": "2.0.0-beta.53",
     "@vuepress/plugin-search": "2.0.0-beta.53",
-    "vue": "^3.2.41",
-    "vuepress": "2.0.0-beta.53"
+    "vue": "^3.2.44",
+    "vuepress": "2.0.0-beta.53",
+    "vuepress-plugin-md-enhance": "2.0.0-beta.122",
+    "vuepress-theme-hope": "2.0.0-beta.121"
   }
 }
