--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "落落的学习笔记",
   "main": "index.js",
   "scripts": {
-    "clean-dev": "vuepress dev --clean-cache",
-    "dev": "vuepress dev",
-    "build": "vuepress build"
+    "clean-dev": "vuepress dev notes --clean-cache",
+    "dev": "vuepress dev notes",
+    "build": "vuepress build notes"
   },
   "keywords": [],
   "author": "techstay",
@@ -17,7 +17,7 @@
     "@vuepress/plugin-search": "2.0.0-beta.53",
     "vue": "^3.2.45",
     "vuepress": "2.0.0-beta.53",
-    "vuepress-plugin-md-enhance": "2.0.0-beta.122",
-    "vuepress-theme-hope": "2.0.0-beta.121"
+    "vuepress-plugin-md-enhance": "2.0.0-beta.130",
+    "vuepress-theme-hope": "2.0.0-beta.130"
   }
 }
