--- a/ruby/koans/Gemfile
+++ b/ruby/koans/Gemfile
@@ -2,6 +2,7 @@
 
 source 'https://rubygems.org'
 
+gem 'rake', require: false
 gem 'reek', require: false
 gem 'rubocop', require: false
 gem 'sorbet', group: :development
