--- a/rust/rust-sample/Cargo.toml
+++ b/rust/rust-sample/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
+description = "my rust study codes"
 edition = "2021"
-name = "hello_world"
+license = "MIT"
+name = "rust-sample"
 version = "0.1.0"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
