--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "我的学习笔记",
   "main": "index.js",
   "scripts": {
-    "clean-dev": "vuepress dev --clean-cache",
-    "dev": "vuepress dev",
-    "build": "vuepress build"
+    "clean-dev": "vuepress dev notes --clean-cache",
+    "dev": "vuepress dev notes",
+    "build": "vuepress build notes",
+    "update": "pnpm dlx vp-update"
   },
   "keywords": [],
   "author": "techstay",
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.53",
-    "@vuepress/plugin-google-analytics": "2.0.0-beta.53",
-    "@vuepress/plugin-search": "2.0.0-beta.53",
-    "vue": "^3.2.45",
-    "vuepress": "2.0.0-beta.53",
-    "vuepress-plugin-md-enhance": "2.0.0-beta.130",
-    "vuepress-theme-hope": "2.0.0-beta.130"
+    "@vuepress/client": "2.0.0-beta.67",
+    "@vuepress/plugin-google-analytics": "2.0.0-beta.67",
+    "@vuepress/plugin-search": "2.0.0-beta.67",
+    "vue": "^3.3.4",
+    "vuepress": "2.0.0-beta.67",
+    "vuepress-plugin-md-enhance": "2.0.0-beta.236",
+    "vuepress-theme-hope": "2.0.0-beta.236"
   }
 }
