--- a/python/python-sample/pyproject.toml
+++ b/python/python-sample/pyproject.toml
@@ -5,8 +5,9 @@ description = "my python sample"
 authors = [
     {name = "techstay", email = "lovery521@gmail.com"},
 ]
-dependencies = []
-requires-python = ">=3.11"
+dependencies = [
+]
+requires-python = ">=3.12"
 readme = "README.md"
 license = {text = "MIT"}
 
@@ -14,5 +15,6 @@ license = {text = "MIT"}
 dev = [
     "bandit>=1.7.5",
     "flake8>=6.0.0",
-    "ipykernel>=6.24.0",
+    "ipykernel>=6.25.2",
+    "pip>=23.2.1",
 ]
