--- a/python/thirdparty-libraries/pyproject.toml
+++ b/python/thirdparty-libraries/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "requests-html>=0.10.0",
     "whenever>=0.7.3",
     "typer>=0.15.2",
+    "feedparser>=6.0.11",
+    "httpx>=0.28.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
