--- a/python/thirdparty-libraries/pyproject.toml
+++ b/python/thirdparty-libraries/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "typer>=0.15.2",
     "feedparser>=6.0.11",
     "httpx>=0.28.1",
+    "pydantic>=2.11.3",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
