--- a/python/python-sample/pyproject.toml
+++ b/python/python-sample/pyproject.toml
@@ -1,20 +1,20 @@
 [project]
-name = "python-sample"
-version = "1.0"
-description = "my python sample"
 authors = [
-    {name = "techstay", email = "lovery521@gmail.com"},
+  {name = "techstay", email = "lovery521@gmail.com"},
 ]
 dependencies = [
+    "loguru>=0.7.3",
 ]
-requires-python = ">=3.12"
-readme = "README.md"
+description = "my python sample"
 license = {text = "MIT"}
-
-[tool.pdm.dev-dependencies]
+name = "python-sample"
+pythonpath = [
+  "src",
+]
+readme = "README.md"
+requires-python = ">=3.12"
+version = "1.0"
+[dependency-groups]
 dev = [
-    "bandit>=1.7.5",
-    "flake8>=6.0.0",
-    "ipykernel>=6.25.2",
-    "pip>=23.2.1",
+  "ipykernel>=6.25.2",
 ]
