--- a/nodejs/javascript-sample/package.json
+++ b/nodejs/javascript-sample/package.json
@@ -5,14 +5,14 @@
   "description": "my javascript study codes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "upp": "bun update --latest"
   },
   "keywords": [],
   "author": "techstay",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^8.44.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2"
+    "@eslint/js": "^9.26.0",
+    "eslint": "^9.26.0",
+    "globals": "^16.0.0"
   }
 }
