--- a/python/python-sample/pyproject.toml
+++ b/python/python-sample/pyproject.toml
@@ -3,7 +3,8 @@ authors = [
   {name = "techstay", email = "lovery521@gmail.com"},
 ]
 dependencies = [
-    "loguru>=0.7.3",
+  "loguru>=0.7.3",
+  "rich>=14.0.0",
 ]
 description = "my python sample"
 license = {text = "MIT"}
