python: add mcp example

--- a/python/ai-demos/pyproject.toml
+++ b/python/ai-demos/pyproject.toml
@@ -12,8 +12,10 @@ dependencies = [
   "datasets>=3.4.1",
   "duckduckgo-search>=7.5.1",
   "gradio>=5.22.0",
+  "httpx>=0.28.1",
   "langfuse>=2.60.2",
   "logfire>=3.8.1",
+  "mcp[cli]>=1.6.0",
   "nest-asyncio>=1.6.0",
   "numpy>=2.2.4",
   "openai>=1.65.4",
