--- a/ruby/ruby-sample/Gemfile
+++ b/ruby/ruby-sample/Gemfile
@@ -1,9 +1,14 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
 
+gem 'debug', require: false
 gem 'reek', require: false
 gem 'rubocop', require: false
+gem 'ruby-lsp'
 gem 'sorbet', group: :development
 gem 'sorbet-runtime'
 gem 'tapioca', require: false, group: :development
 
+gem 'awesome_print', '~> 1.9'
 gem 'bigdecimal'
