--- a/python/ai-demos/pyproject.toml
+++ b/python/ai-demos/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 dependencies = [
-  # "agentops>=0.4.3",
-  # "arize-phoenix>=8.19.0",
-  # "arize-phoenix-otel>=0.9.0",
-  # "openinference-instrumentation-openai>=0.1.22",
-  # "openinference-instrumentation-openai-agents>=0.1.4",
-  # "scorecard-ai>=1.1.1",
+  "agentops>=0.4.3",
+  "arize-phoenix>=8.19.0",
+  "arize-phoenix-otel>=0.9.0",
+  "openinference-instrumentation-openai>=0.1.22",
+  "openinference-instrumentation-openai-agents>=0.1.4",
+  "scorecard-ai>=1.1.1",
   "agno>=1.2.5",
   "baidusearch>=1.0.3",
   "braintrust[openai-agents]>=0.0.190",
@@ -14,7 +14,7 @@ dependencies = [
   "gradio>=5.22.0",
   "httpx>=0.28.1",
   "langfuse>=2.60.2",
-  "logfire>=3.8.1",
+  "logfire[httpx]>=3.8.1",
   "mcp[cli]>=1.6.0",
   "nest-asyncio>=1.6.0",
   "numpy>=2.2.4",
@@ -23,10 +23,22 @@ dependencies = [
   "openai-agents>=0.0.4",
   "pycountry>=24.6.1",
   "pydantic>=2.11.3",
-  "pydantic-ai>=0.0.36",
+  "pydantic-ai[logfire]>=0.0.36",
   "pydantic-ai-slim[duckduckgo,tavily]>=0.0.36",
   "rich>=13.9.4",
-  "smolagents[telemetry]>=1.12.0",
+  "smolagents[telemetry,toolkit]>=1.12.0",
+  "googlesearch-python>=1.3.0",
+  "arize-otel>=0.10.0",
+  "openinference-instrumentation-agno>=0.1.14",
+  "opentelemetry-sdk>=1.36.0",
+  "opentelemetry-exporter-otlp>=1.36.0",
+  "yfinance>=0.2.65",
+  "weave>=0.52.5",
+  "traceai-openai-agents>=0.1.4",
+  "agenta>=0.51.3",
+  "traceloop-sdk>=0.46.2",
+  "ddgs>=9.5.5",
+  "opik>=1.8.19",
 ]
 description = "Add your description here"
 name = "ai-demos"
