--- a/python/thirdparty-libraries/pyproject.toml
+++ b/python/thirdparty-libraries/pyproject.toml
@@ -23,12 +23,13 @@ dependencies = [
   "lxml[html-clean]>=5.4.0",
   "rich>=14.0.0",
   "loguru>=0.7.3",
+  "sqlalchemy",
 ]
 description = "my python 3rd party libraries demos"
 license = {text = "MIT"}
 name = "thirdparty-libraries"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.14"
 version = "1.0"
 [dependency-groups]
 dev = [
